# SenseNova-SI

./: README.md  README_CN.md  example.py  pyproject.toml  requirements.txt  utils.py
examples/: examples.jsonl
sensenova_si/: __init__.py  internvl.py  utils.py
