[project]
name = "SenseSI"
version = "0.1.0"
description = "Scaling Spatial Intelligence with Multimodal Foundation Models"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["computer vision", "multimodal", "spatial intelligence", "MLLM"]
dependencies = [
    "torch==2.4.0",
    "torchvision",
    "transformers==4.37.2",
    "Pillow",
    "numpy",
    "setuptools",
    "einops>=0.8.1",
    "timm>=1.0.22",
    "flash_attn==2.7.4.post1",
    "accelerate>=1.11.0",
]
